# Kage

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  404.html  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  index.html  mkdocs.yml  objects.inv  pyproject.toml  renovate.json  search_improvements_explanation.py  sitemap.xml  test_search_improvements.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  QUICK_REFERENCE.md  copilot-instructions.md  labeler_branch.yml
.github/ISSUE_TEMPLATE/: bug_report.md  chore_issue.md  feature_request.md  fix_request.md
.github/actions/setup-python-with-uv/: action.yml
.github/chatmodes/: flet-enginner.chatmode.md  software-engineer-agent-v1.chatmode.md
.github/instructions/: coding.instructions.md  python.instructions.md  test-coding.instructions.md
.github/prompts/: github-mcp.prompt.md  openspec-proposal.prompt.md
.github/workflows/: assgin_label.yml  assign_label.yml  build_windows.yml  docs-check.yml  docs.yml  format.yml  lint.yml  pyright_check.yml  ruff_check.yml  test.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
agents_guide/: index.html
app/concept/: index.html
app/ui/: index.html
architecture-design/: index.html
branch_naming/: index.html
contributing_docs/: index.html
dev/agents_guide/: index.html
dev/architecture-design/: index.html
dev/branch_naming/: index.html
dev/cli/: index.html
dev/cli/agent/: index.html
dev/cli/dev/: index.html
dev/cli/error_handling/: index.html
dev/cli/memo/: index.html
dev/cli/project/: index.html
dev/cli/tag/: index.html
dev/cli/task/: index.html
dev/cli/task_qa/: index.html
dev/cli/task_status/: index.html
dev/cli/task_tag/: index.html
dev/configuration/: index.html
dev/contributing_docs/: index.html
dev/migrations/: index.html
dev/reference/commands_queries/: index.html
dev/reference/models/: index.html
dev/setup/: index.html
dev/task_runner/: index.html
dev/views_guide/: index.html
docs/: architecture-design.md  branch_naming.md  index.md  migrations.md  setup.md  task_runner.md  views_guide.md
docs/app/: concept.md  ui.md
docs/dev/: agents_guide.md  application-settings.md  architecture-design.md  configuration.md  logic_search.md  migrations.md  setup.md  task_runner.md  terminology_management.md  terms-crud-handover.md  terms-crud-tasks.md  theme-usage-guide.md  views_guide.md
docs/dev/cli/: agent.md  dev.md  error_handling.md  index.md  memo.md  project.md  tag.md  task.md  task_qa.md  task_status.md  task_tag.md
docs/dev/reference/: commands_queries.md  models.md
docs/images/: README.md
images/: index.html
migrations/: index.html
openspec/: Tasks.md  ToDo.md  views-flet-proposal.md
openspec/changes/add-memo-to-task-agent/: tasks.md
openspec/changes/add-weekly-review-task-actions/: design.md  proposal.md  tasks.md
openspec/changes/adopt-memoread-input/: tasks.md
openspec/changes/centralize-application-settings-access/: design.md  proposal.md  tasks.md
openspec/changes/connect-settings-view-logic/: tasks.md
openspec/changes/convert-memo-to-task-to-tool-calling/: proposal.md  tasks.md
openspec/changes/fix-memo-to-task-iso8601/: tasks.md
openspec/changes/introduce-application-search/: design.md  tasks.md
openspec/changes/raise-logic-tests-coverage/: design.md  proposal.md  tasks.md
openspec/changes/update-memo-ai-agent-integration/: proposal.md  tasks.md
openspec/specs/agent-integration/: spec.md
openspec/specs/base-view-contract/: spec.md
openspec/specs/component-launcher/: spec.md
openspec/specs/home-one-liner-refresh/: spec.md
openspec/specs/logic-testing-coverage/: spec.md
openspec/specs/memo-search/: spec.md
openspec/specs/memo-to-task-agent/: spec.md
openspec/specs/project-search/: spec.md
openspec/specs/projects-query-transition/: spec.md
openspec/specs/projects-view-logic-binding/: spec.md
openspec/specs/tag-search/: spec.md
scripts/: __init__.py  agents_test.py  component_launcher.py  genai_test.py  generate_agent_graph.py  generate_env_docs.py  remove_database.py  run_logic_cov.py  run_migrate.py  seed_memos.py  seed_sample_data.py
search/: search_index.json
setup/: index.html
src/: config.py  env.py  errors.py  logging_conf.py  main.py  router.py  router_config.py
src/agents/: agent_conf.py  base.py  utils.py
src/cli/: __init__.py  main.py  utils.py
src/controllers/: __init__.py  task_controller.py
src/logic/: README.md  __init__.py  auto_discovery.py  container.py  factory.py  old_task.py  registry.py  task.py  unit_of_work.py
src/models/: README.md  __init__.py  alembic.ini  memo.py  memo_tag.py  new_task.py  project.py  quick_action.py  review.py  settings.py  tag.py  task.py  task_tag.py  terminology.py  user.py
src/settings/: __init__.py  manager.py  models.py  review.py  utils.py
src/views/: __init__.py  components.py  home.py  layout.py  sample.py  task.py  theme.py
src/views_new/: __init__.py  layout.py  sample.py  theme.py
src/views_old/: __init__.py  layout.py
task_runner/: index.html
tests/: final_demo.py  integration_test.py  simple_autodiscovery_test.py  simple_factory_test.py  simple_registry_test.py  test_app_settings.py  test_ci_configuration.py  test_generic_factory.py  test_labeler_config.py  type_safety_demo.py
tests/agents/: conftest.py  test_memo_to_task_agent.py  test_simple_chat_agent.py  test_task_splitter_agent.py  test_utils_and_validation.py
tests/logic/: COVERAGE_REPORT.md  README.md  __init__.py  conftest.py  helpers.py  test_auto_discovery.py  test_container.py  test_factory.py  test_factory_new.py  test_registry.py  test_task.py  test_unit_of_work.py
tests/migrations/: alembic.ini  alembic.md  models.py  settings.py
tests/models/: __init__.py  test_task.py
tests/settings/: test_env_overlay.py  test_env_settings.py  test_huggingface_model_save.py
tests/views/: __init__.py
views_guide/: index.html
(+553 files in other folders)
