[project]
name = "kage"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "alembic>=1.16.2",
    "flet==0.27.6",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "langsmith>=0.3.45",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.0",
    "sqlmodel>=0.0.24",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Kage"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
    "pre-commit>=4.2.0",
    "pyright>=1.1.400",
    "pytest>=8.4.0",
    "ruff>=0.11.0, <0.12",
]

# Poe the Poet
[tool.poe.tasks]
# == Application execution ==
app-run = "flet run"
app-dev = "flet run -dr"
app-web = "flet run --web"
app-web-dev = "flet run --web -dr"
app-debug = "flet run -v"

# == Development environment setup ==
setup = ["sync", "db-upgrade"]
sync = "uv sync"

# == Database operations ==
db-upgrade = { shell = "cd src/models && uv run alembic upgrade head" }
db-downgrade = { shell = "cd src/models && uv run alembic downgrade -1" }
db-history = { shell = "cd src/models && uv run alembic history" }
db-current = { shell = "cd src/models && uv run alembic current" }

# == Code quality and formatting ==
lint = "uv run ruff check src"
lint-fix = "uv run ruff check src --fix"
format = "uv run ruff format src"
format-check = "uv run ruff format src --check"
type-check = "uv run pyright src"

# == Composite commands ==
check = ["lint", "format-check", "type-check"]
fix = ["lint-fix", "format"]

# == Test execution ==
test = "uv run pytest"
test-unit = "uv run pytest -m unit"
test-integration = "uv run pytest -m integration"
test-cov = "uv run pytest --cov=src --cov-report=html"

# == Dependency management ==
deps-list = "uv pip list"
deps-tree = "uv pip tree"
deps-outdated = "uv pip list --outdated"

# == Build and packaging ==
build-web = "flet build web"
build-desktop = "flet build windows"
pack-desktop = "flet pack"

# == Cleanup ==
clean = "uv cache clean"
clean-pyc = { shell = "Get-ChildItem -Path . -Filter '*.pyc' -Recurse | Remove-Item -Force" }
clean-all = ["clean", "clean-pyc"]

# == Log management ==
logs-app = { shell = "Get-Content storage/data/logs/app.log -Tail 50" }
logs-agents = { shell = "Get-Content storage/data/logs/agents.log -Tail 50" }
logs-clear = { shell = "Remove-Item storage/data/logs/*.log -ErrorAction SilentlyContinue" }


# (https://zenn.dev/mutex_inc/articles/4183b992ccd701)
[tool.ruff]
line-length = 120
exclude = [
    "src/models/migrations/versions/",
]

[tool.ruff.format]
docstring-code-format = true


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",    # undocumented
    "D203",  # one blank line before class
    "D213",  # multi-line summary second line
    "D400",
    "D415",
    "TD001", # invalid todo tag
    "TD002", # missing todo author
    "TD003", # missing todo link
    "PD011", # pandas use of dot values
    "ERA001",
    "RUF001",
    "RUF002",
    "RUF003",
    "COM812",
    "DTZ005",
    "BLE001",
]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "D",
    "S101",
    "N802",
    "ARG",
]

# logger-objects = ["src.library.logger.LOGGER"]

[tool.ruff.lint.pylint]
max-args = 6


[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs",
    "src/models/migrations/versions"
]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"


[tool.pytest.ini_options]
pythonpath = "src"

testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

addopts = [
    "--strict-markers",
    "--disable-warnings",
    "--verbose",
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]
